--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,11 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+  "node_modules",
+  "emsdk",                    // ⛔ prevents compilation of the folder causing build failure
+  "**/emscripten/**",
+  "**/emsdk/**",
+  "**/test/**"                // optional but recommended
+]
 }
