--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
+    "global.d.ts",
     "**/*.mts"
   ],
   "exclude": [
