--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "next build"
-  publish = ".next"
+  command = "npm run build"
+  publish = ".netlify/build"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
